--- a/Standard/dol.bib
+++ b/Standard/dol.bib
@@ -115,10 +115,10 @@
   journal = {W3C Recommendation, 25 February 2014.  \url{http://www.w3.org/TR/2014/REC-turtle-20140225/}},
   year = 2014,
 }
-@article{W3C:REC-rdf-syntax-grammar-20140225,
+@article{W3C:rdf-syntax-grammar,
   author = {W3C RDF Core Working Group},
   title = {{RDF} 1.1 {XML} Syntax},
-  journal = {W3C Recommendation, 25 February 2014.  \url{http://www.w3.org/TR/2014/REC-rdf-syntax-grammar-20140225/}},
+  journal = {W3C Recommendation, 25 February 2014.  \url{http://www.w3.org/TR/rdf-syntax-grammar/}},
   year = 2014,
 }
 @article{W3C:REC-rdf-syntax-grammar-20040210,
@@ -127,10 +127,10 @@
   journal = {W3C Recommendation, 10 February 2004.  \url{http://www.w3.org/TR/2004/REC-rdf-syntax-grammar-20040210/}},
   year = 2004,
 }
-@article{W3C:NOTE-swbp-vocab-pub-20080828,
+@article{W3C:swbp-vocab-pub,
   author = {W3C Semantic Web Deployment Working Group},
   title = {Best Practice Recipes for Publishing RDF Vocabularies},
-  journal = {W3C Working Group Note, 28 August 2008.  \url{http://www.w3.org/TR/2008/NOTE-swbp-vocab-pub-20080828/}},
+  journal = {W3C Working Group Note, 28 August 2008.  \url{http://www.w3.org/TR/swbp-vocab-pub/}},
   year = 2008,
 }
 @article{rfc2616notused,
@@ -145,22 +145,22 @@
   journal = {27 July 2006. \url{http://www.w3.org/DesignIssues/LinkedData.html}},
   year = 2006,
 }
-@article{W3C:NOTE-owl2-manchester-syntax-20091027,
+@article{W3C:owl2-manchester-syntax,
   author = {W3C OWL Working Group},
   title = {OWL 2 Web Ontology Language Manchester Syntax},
-  journal = {W3C Working Group Note, 27 October 2009.\newline \url{http://www.w3.org/TR/2009/NOTE-owl2-manchester-syntax-20091027/}},
+  journal = {W3C Working Group Note, 27 October 2009.\newline \url{http://www.w3.org/TR/owl2-manchester-syntax/}},
   year = 2009,
 }
-@article{W3C:REC-owl2-xml-serialization-20121211,
+@article{W3C:owl2-xml-serialization,
   author = {W3C OWL Working Group},
   title = {OWL 2 Web Ontology Language: {XML} Serialization (Second Edition)},
-  journal = {W3C Recommendation, 11 December 2012.\newline \url{http://www.w3.org/TR/2012/REC-owl2-xml-serialization-20121211/}},
+  journal = {W3C Recommendation, 11 December 2012.\newline \url{http://www.w3.org/TR/owl2-xml-serialization/}},
   year = 2012,
 }
-@article{W3C:REC-owl2-rdf-based-semantics-20091027,
+@article{W3C:owl2-rdf-based-semantics,
   author = {W3C OWL Working Group},
   title = {OWL 2 Web Ontology Language: RDF-Based Semantics},
-  journal = {W3C Recommendation, 27 October 2009.\newline \url{http://www.w3.org/TR/2009/REC-owl2-rdf-based-semantics-20091027/}},
+  journal = {W3C Recommendation, 27 October 2009.\newline \url{http://www.w3.org/TR/owl2-rdf-based-semantics/}},
   year = 2009,
 }
 @article{Wikipedia:LinkedData2011,
