corrected diff for 351

--- a/Standard/OMG_OntoIOp_current-diff-all.tex
+++ b/Standard/OMG_OntoIOp_current-diff-all.tex
@@ -4804,7 +4804,7 @@ constraints via the EBNF grammar.
 \begin{lstlisting}[language=ebnf,escapeinside={()},mathescape]
 
 BasicOMS           ::= ($<$)language and serialization specific($>$) 
-ClosableOMS        ::= BasicOMS |  ( \DIFaddbegin \DIFadd{'}{\DIFadd{' BasicOMS '}}\DIFadd{' | }\DIFaddend )  OMSRef [ImportName]
+ClosableOMS        ::= BasicOMS |  ( \DIFaddbegin \DIFadd{'\{}{\DIFadd{' BasicOMS '}}\DIFadd{\}' | }\DIFaddend )  OMSRef [ImportName]
 ExtendingOMS       ::= ClosableOMS | RelativeClosureOMS
 RelativeClosureOMS ::= ClosureType '{' ClosableOMS '}'
 OMS                ::= ExtendingOMS
