--- a/Standard/OMG_OntoIOp_current-diff-all.tex
+++ b/Standard/OMG_OntoIOp_current-diff-all.tex
@@ -1448,17 +1448,27 @@ be able to expand CURIEs into IRIs when requested.
 % The following referenced documents are indispensable for the application of this document. For dated references, only
 % the edition cited applies. For undated references, the latest edition of the referenced document (including any
 % amendments) applies.
-  \item{W3C/TR REC-ldp-20150226:2015} {Linked Data Platform 1.0. W3C Recommendation, 26 February 2015.\\ \url{http://www.w3.org/TR/2015/REC-ldp-20150226/}}\label{nref-linked-data}
-  \item{W3C/TR REC-owl2-syntax:2012} {OWL 2 Web Ontology Language: Structural Specification and Functional-Style Syntax (Second Edition). W3C Recommendation, 11 December 2012.\\ \url{http://www.w3.org/TR/2012/REC-owl2-syntax-20121211/}}\label{nref-OWL2}
-  \item{ISO/IEC 14977:1996} {Information technology – Syntactic metalanguage – Extended BNF}\label{nref-EBNF}
-  \item{W3C/TR REC-xml:2008} {Extensible Markup Language (XML) 1.0 (Fifth Edition). W3C Recommendation, 26 November 2008. \\
-  \url{http://www.w3.org/TR/2008/REC-xml-20081126/}}\label{nref-XML}
-  \item{W3C/TR REC-owl2-primer:2012} {OWL 2 Web Ontology Language: Primer (Second Edition). W3C Recommendation, 11 December 2012. \\
-  \url{http://www.w3.org/TR/2012/REC-owl2-primer-20121211/}}\label{nref-OWL2-primer}
-  \item{W3C/TR REC-owl2-profiles:2012} {OWL 2 Web Ontology Language: Profiles (Second Edition). W3C Recommendation, 11 December 2012. \\
-  \url{http://www.w3.org/TR/2012/REC-owl2-profiles-20121211/}}\label{nref-OWL2-profiles}
-  \item{ISO/IEC 24707:2007} {Information technology – Common Logic (CL): a framework for a family of logic-based languages}\label{nref-CL}
-  \item{OMG Document ptc/2013-09-05} {OMG Unified Modeling Language (OMG UML)\\
+  \DIFdelbegin %DIFDELCMD < \item{W3C/TR REC-ldp-20150226:2015} %%%
+\DIFdelend \DIFaddbegin \item{W3C/TR ldp} \DIFaddend {Linked Data Platform\DIFdelbegin \DIFdel{1.0}\DIFdelend . W3C Recommendation, 26 February 2015.\\ \DIFdelbegin %DIFDELCMD < \url{http://www.w3.org/TR/2015/REC-ldp-20150226/}%%%
+\DIFdelend \DIFaddbegin \url{http://www.w3.org/TR/ldp/}\DIFaddend }\label{nref-linked-data}
+  \DIFdelbegin %DIFDELCMD < \item{W3C/TR REC-owl2-syntax:2012} %%%
+\DIFdelend \DIFaddbegin \item{W3C/TR owl2-syntax} \DIFaddend {OWL 2 Web Ontology Language: Structural Specification and Functional-Style Syntax\DIFdelbegin \DIFdel{(Second Edition)}\DIFdelend . W3C Recommendation, 11 December 2012.\\ \DIFdelbegin %DIFDELCMD < \url{http://www.w3.org/TR/2012/REC-owl2-syntax-20121211/}%%%
+\DIFdelend \DIFaddbegin \url{http://www.w3.org/TR/owl2-syntax/}\DIFaddend }\label{nref-OWL2}
+  \item{ISO/IEC 14977:1996} {Information technology – Syntactic metalanguage – Extended BNF\DIFaddbegin \DIFadd{.}\DIFaddend }\label{nref-EBNF}
+  \DIFdelbegin %DIFDELCMD < \item{W3C/TR REC-xml:2008} %%%
+\DIFdelend \DIFaddbegin \item{W3C/TR xml} \DIFaddend {Extensible Markup Language (XML)\DIFdelbegin \DIFdel{1.0 (Fifth Edition)}\DIFdelend . W3C Recommendation, 26 November 2008. \\
+  \DIFdelbegin %DIFDELCMD < \url{http://www.w3.org/TR/2008/REC-xml-20081126/}%%%
+\DIFdelend \DIFaddbegin \url{http://www.w3.org/TR/xml/}\DIFaddend }\label{nref-XML}
+  \DIFdelbegin %DIFDELCMD < \item{W3C/TR REC-owl2-primer:2012} %%%
+\DIFdelend \DIFaddbegin \item{W3C/TR owl2-primer} \DIFaddend {OWL 2 Web Ontology Language: Primer\DIFdelbegin \DIFdel{(Second Edition)}\DIFdelend . W3C Recommendation, 11 December 2012. \\
+  \DIFdelbegin %DIFDELCMD < \url{http://www.w3.org/TR/2012/REC-owl2-primer-20121211/}%%%
+\DIFdelend \DIFaddbegin \url{http://www.w3.org/TR/owl2-primer/}\DIFaddend }\label{nref-OWL2-primer}
+  \DIFdelbegin %DIFDELCMD < \item{W3C/TR REC-owl2-profiles:2012} %%%
+\DIFdelend \DIFaddbegin \item{W3C/TR owl2-profiles} \DIFaddend {OWL 2 Web Ontology Language: Profiles\DIFdelbegin \DIFdel{(Second Edition)}\DIFdelend . W3C Recommendation, 11 December 2012. \\
+  \DIFdelbegin %DIFDELCMD < \url{http://www.w3.org/TR/2012/REC-owl2-profiles-20121211/}%%%
+\DIFdelend \DIFaddbegin \url{http://www.w3.org/TR/owl2-profiles/}\DIFaddend }\label{nref-OWL2-profiles}
+  \item{ISO/IEC 24707:2007} {Information technology – Common Logic (CL): a framework for a family of logic-based languages\DIFaddbegin \DIFadd{.}\DIFaddend }\label{nref-CL}
+  \item{OMG Document ptc/2013-09-05} {OMG Unified Modeling Language (OMG UML)\DIFaddbegin \DIFadd{.}\DIFaddend \\
   \url{http://www.omg.org/spec/UML/Current}}\label{nref-UML} %%?
   \item{IETF/RFC 2046} {Multipurpose Internet Mail Extensions (MIME)
     Part Two: Media Types.\\ 
@@ -1466,32 +1476,38 @@ be able to expand CURIEs into IRIs when requested.
   \item{IETF/RFC 3986} {Uniform Resource Identifier (URI): Generic Syntax. January 2005.\\ \url{http://tools.ietf.org/html/rfc3986}}\label{nref-URI}
   \item{IETF/RFC 3987} {Internationalized Resource Identifiers (IRIs). January 2005.\\ \url{http://tools.ietf.org/html/rfc3987}}\label{nref-IRI}
   \item{IETF/RFC 5147} {URI Fragment Identifiers for the text/plain Media Type.  April 2008.\\ \url{http://tools.ietf.org/html/rfc5147}}\label{nref-text/plain-URI}
-  \item{W3C/TR REC-xptr-framework:2003} {XPointer Framework.  W3C Recommendation, 25 March 2003. \\ \url{http://www.w3.org/TR/2003/REC-xptr-framework-20030325/}}\label{nref-XPointer}
+  \DIFdelbegin %DIFDELCMD < \item{W3C/TR REC-xptr-framework:2003} %%%
+\DIFdelend \DIFaddbegin \item{W3C/TR xptr-framework} \DIFaddend {XPointer Framework.  W3C Recommendation, 25 March 2003. \\ \DIFdelbegin %DIFDELCMD < \url{http://www.w3.org/TR/2003/REC-xptr-framework-20030325/}%%%
+\DIFdelend \DIFaddbegin \url{http://www.w3.org/TR/xptr-framework/}\DIFaddend }\label{nref-XPointer}
   \item{W3C/TR REC-rdf11-concepts:2014} {RDF 1.1 Concepts and Abstract Syntax.  W3C Recommendation, 25 February 2014. \\ \url{http://www.w3.org/TR/2014/REC-rdf11-concepts-20140225/}}\label{nref-RDF}
   \item{W3C/TR REC-xml-names:2009} {Namespaces in XML 1.0 (Third Edition). W3C Recommendation, 8 December 2009.\\
    \url{http://www.w3.org/TR/2009/REC-xml-names-20091208/}}\label{nref-XMLns}
   \item{W3C/TR REC-rdfa-core:2015} {RDFa Core 1.1 -- Third Edition.  Syntax and processing rules for embedding RDF through attributes. W3C Recommendation, 17 March 2015.\\ \url{http://www.w3.org/TR/2015/REC-rdfa-core-20150317/}}\label{nref-RDFa}
   % This standard has no unique year, as it consist of multiple parts (see http://tools.ietf.org/html/rfc3629#ref-ISO.10646)
-  \item{ISO/IEC 10646} {Information technology – Universal Multiple-Octet coded Character Set (UCS)}\label{nref-UCS}
+  \item{ISO/IEC 10646} {Information technology – Universal Multiple-Octet coded Character Set (UCS)\DIFaddbegin \DIFadd{.}\DIFaddend }\label{nref-UCS}
   %\item{W3C/TR REC-rdf-sparql-query:2008} {SPARQL Query Language for RDF. W3C Recommendation, 15 January 2008. \url{http://www.w3.org/TR/2008/REC-rdf-sparql-query-20080115/}}
-  \item{W3C/TR REC-rdf-schema:2014} {RDF Schema 1.1. W3C Recommendation, 25 February 2014.\\ \url{http://www.w3.org/TR/2014/REC-rdf-schema-20140225/}}\label{nref-RDFS}
+  \DIFdelbegin %DIFDELCMD < \item{W3C/TR REC-rdf-schema:2014} %%%
+\DIFdelend \DIFaddbegin \item{W3C/TR rdf-schema} \DIFaddend {RDF Schema\DIFdelbegin \DIFdel{1.1}\DIFdelend . W3C Recommendation, 25 February 2014.\\ \DIFdelbegin %DIFDELCMD < \url{http://www.w3.org/TR/2014/REC-rdf-schema-20140225/}%%%
+\DIFdelend \DIFaddbegin \url{http://www.w3.org/TR/rdf-schema/}\DIFaddend }\label{nref-RDFS}
   \item{W3C/TR REC-rdf11-mt:2014} {RDF 1.1 Semantics.  W3C Recommendation, 25 February 2014. \\ \url{http://www.w3.org/TR/2014/REC-rdf11-mt-20140225/}}\label{nref-RDFSs}
   \item{W3C/TR REC-owl2-mapping-to-rdf:2012} {OWL 2 Web Ontology Language
-Mapping to RDF Graphs (Second Edition).  W3C Recommendation, 11 December 2012\\ \url{http://www.w3.org/TR/2012/REC-owl2-mapping-to-rdf-20121211/}}\label{nref-OWL2RDF}
+Mapping to RDF Graphs (Second Edition).  W3C Recommendation, 11 December \DIFdelbegin \DIFdel{2012}\DIFdelend \DIFaddbegin \DIFadd{2012.}\DIFaddend \\ \url{http://www.w3.org/TR/2012/REC-owl2-mapping-to-rdf-20121211/}}\label{nref-OWL2RDF}
   \item{DCMI Metadata Terms:2012} {DCMI Metadata Terms, DCMI Recommendation, DCMI Usage Board, 14 July 2012.\\
      \url{http://dublincore.org/documents/2012/06/14/dcmi-terms/}}\label{nref-DCMI}
-  \item{W3C/TR REC-skos-reference:2009} {SKOS Simple Knowledge Organization System
-Reference.  W3C Recommendation, 18 August 2009\\ \url{http://www.w3.org/TR/2009/REC-skos-reference-20090818/}}\label{nref-SKOS}
-  \item{OMG Specification Metadata:2014} {Specification Metadata (SM) Vocabulary.  OMG, 18 August 2014\\
+  \DIFdelbegin %DIFDELCMD < \item{W3C/TR REC-skos-reference:2009} %%%
+\DIFdelend \DIFaddbegin \item{W3C/TR skos-reference} \DIFaddend {SKOS Simple Knowledge Organization System
+Reference.  W3C Recommendation, 18 August \DIFdelbegin \DIFdel{2009}\DIFdelend \DIFaddbegin \DIFadd{2009.}\DIFaddend \\ \DIFdelbegin %DIFDELCMD < \url{http://www.w3.org/TR/2009/REC-skos-reference-20090818/}%%%
+\DIFdelend \DIFaddbegin \url{http://www.w3.org/TR/skos-reference/}\DIFaddend }\label{nref-SKOS}
+  \item{OMG Specification Metadata:2014} {Specification Metadata (SM) Vocabulary.  OMG, 18 August \DIFdelbegin \DIFdel{2014}\DIFdelend \DIFaddbegin \DIFadd{2014.}\DIFaddend \\
 \url{http://www.omg.org/techprocess/ab/20140801/SpecificationMetadata.rdf}}\label{nref-OMG-SM}
   \item{ODM} {Ontology Definition Metamodel, 2 September 2014. \\ \url{http://www.omg.org/spec/ODM/1.1/}}\label{nref-ODM}
-\item{MOF} { Meta Object Facility} \\ \url{http://www.omg.org/spec/MOF/}\label{nref-MOF}
-\item{SMOF} { Support for Semantic Structure, April 2013} \\ \url{http://www.omg.org/spec/SMOF/1.0/}\label{nref-SMOF}
-\item{XMI} {Metadata Interchange (XMI) – using MOF 2 XMI, April 2014} \\ \url{http://www.omg.org/spec/XMI/}\label{nref-XMI}
+\item{MOF} { Meta Object Facility\DIFaddbegin \DIFadd{.}\DIFaddend } \\ \url{http://www.omg.org/spec/MOF/}\label{nref-MOF}
+\item{SMOF} { Support for Semantic Structure, April \DIFdelbegin \DIFdel{2013}\DIFdelend \DIFaddbegin \DIFadd{2013.}\DIFaddend } \\ \url{http://www.omg.org/spec/SMOF/1.0/}\label{nref-SMOF}
+\item{XMI} {Metadata Interchange (XMI) – using MOF 2 XMI, April \DIFdelbegin \DIFdel{2014}\DIFdelend \DIFaddbegin \DIFadd{2014.}\DIFaddend } \\ \url{http://www.omg.org/spec/XMI/}\label{nref-XMI}
 %\item{PRR} {Production Rule Representation, December 2009} \\ \url{ http://www.omg.org/spec/PRR/1.0// }
-\item{SBVR} {Semantics Of Business Vocabulary And Rules, November 2013} \\ \url{http://www.omg.org/spec/SBVR/}\label{nref-SBVR}
-\item{DTV} {Date-Time Vocabulary, August 2013} \\ \url{http://www.omg.org/spec/DTV/1.0/}\label{nref-DTV}
-\item{RIF} {Rule Interchange Format, February 2013} \\ \url{http://www.w3.org/TR/rif-overview/}\label{nref-RIF}
+\item{SBVR} {Semantics Of Business Vocabulary And Rules, November \DIFdelbegin \DIFdel{2013}\DIFdelend \DIFaddbegin \DIFadd{2013.}\DIFaddend } \\ \url{http://www.omg.org/spec/SBVR/}\label{nref-SBVR}
+\item{DTV} {Date-Time Vocabulary, August \DIFdelbegin \DIFdel{2013}\DIFdelend \DIFaddbegin \DIFadd{2013.}\DIFaddend } \\ \url{http://www.omg.org/spec/DTV/1.0/}\label{nref-DTV}
+\item{RIF} {Rule Interchange Format, February \DIFdelbegin \DIFdel{2013}\DIFdelend \DIFaddbegin \DIFadd{2013.}\DIFaddend } \\ \url{http://www.w3.org/TR/rif-overview/}\label{nref-RIF}
  \end{enumerate} 
 
 
