--- a/Standard/OMG_OntoIOp_current-diff-all.tex
+++ b/Standard/OMG_OntoIOp_current-diff-all.tex
@@ -1578,7 +1578,6 @@ plus non-logical annotations\index{annotation}.}
 %\begin{definitions}
 
 \termdefinition{DOL structured OMS}{syntactically valid \DOL expression denoting an OMS that is built from smaller OMS as building blocks.}
-
   \begin{note}
    \DOL structured OMS, typically, use basic OMS as building blocks for defining other structured OMS, OMS mappings or OMS networks.  
   \end{note}
@@ -1587,36 +1586,49 @@ plus non-logical annotations\index{annotation}.}
   \end{note}
 
  
-\termdefinition{ontology}{\termref{logical theory} that is used as a
-  shard conceptualization}
+\bc{4} 
+\termdefinition{ontology}{\DIFdel{\termref{logical theory} that is used as a
+   shard conceptualization}
+\DIFadd{explicit and shared formal representation of the entities and their interrelationships of a given domain of discourse or of fundamental notions}}
+\begin{note}
+\DIFadd{The explicit and shared formal representation is materialised in some OMS language (or several such languages).}
+\end{note}
+\begin{note}
+\DIFadd{Ontologies also include definitions and explanations in natural language that capture the intended meaning of the formal expressions.}
+\end{note}
+\begin{note}
+\DIFadd{Ontologies typically include a taxonomy and, frequently, a partonomy.}
+\end{note}
+
+\termdefinition{model}{\DIFdel{logical theory that is used as an
+ abstract representation of a domain or of a system, in
+ the sense of} \DIFadd{representation of (the development of) a system (e.g. hardware, software or information system or organisation), or a domain related to a system, used in} model-driven engineering (MDE)}
+\ec
 
 \bc{82}
-\DIFdelbegin %DIFDELCMD < \termdefinition{MDE model}{logical theory that is used as an
-%DIFDELCMD < abstract representation of a domain or of a system, in
-%DIFDELCMD <   the sense of model-driven engineering (MDE)}
-%DIFDELCMD < %%%
-\DIFdelend \DIFaddbegin \termdefinition{model}{logical theory that is used as an
-abstract representation of a domain or of a system, in
-  the sense of model-driven engineering (MDE)}
-\DIFaddend \begin{note}
+\begin{note}
 Not to be confused with the term \termref{model} in the sense
 of logic (model theory). \DIFaddbegin \DIFadd{In this document, we use the term }\termref{realization} \DIFadd{for models in the sense of model theory in logic.
 }\DIFaddend \end{note}
 \ec
 
-\termdefinition{specification}{logical theory that is used to express formal
-constraint in mathematical structures, software systems and/or hardware
-systems}
+\bc{4}
+\termdefinition{specification}{\DIFdel{logical theory that is used to express formal
+ constraint in mathematical structures, software systems and/or hardware
+ systems}
+\DIFadd{formal representation of (requirements of) a data structure, an algorithm or a hardware or software system used in systems analysis, requirements analysis and systems design}}
+\ec
 
 \bc{82}
 \DIFdelbegin \DIFdel{\termdefinitionLight{OMS (ontology, specification or MDE model)\index{OMS}}
 }\DIFdelend \DIFaddbegin \DIFadd{\termdefinitionLight{OMS (ontology, specification or model)\index{OMS}}
-}\DIFaddend {basic OMS or structured OMS.}
+}\DIFaddend
+\ec
+\bc{4}
+{\DIFdelbegin \DIFdel{basic OMS or structured OMS}\DIFdelend \DIFaddbegin \DIFadd{collection of expressions (like non-logical symbols, sentences and structuring elements) in a given OMS language (or several such languages) and denoting a class of models and, possibly, a logical theory}\DIFaddend .}
 \ec
 \begin{note}
-
 	An OMS is either a basic OMS (which is always a native OMS, and can occur as a text fragment in a \DOL document) or a structured OMS (which can be either a native structured OMS contained in some native document, or a \DOL structured OMS contained in a \DOL document).
-
 \end{note}
 \begin{note}
 	An OMS has a single signature and model class over that signature as its model-theoretic semantics.
